bots to eworker

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -842,7 +842,7 @@
                                 <h5>Developer Panel</h5>
                                 <p>Developer panel is used to develop the flow or script to automate any type of operations, either Desktop or Web-based, and using the Record button the developer can also create a flow of web automation.</p>
                                 <h5>Properties Panel</h5>
-                                <p>The properties panel is used to specify each Action’s and sub-actions property and helps to automate the bot 8successfully.</p>
+                                <p>The properties panel is used to specify each Action’s and sub-actions property and helps to automate the eWorker 8successfully.</p>
                                 <h5>Variables Panel</h5>
                                 <p>The variables panel is used to specify the names to identify and store the data in different formats like data table, list, and string, etc., According to the usage, variables may be called into the properties panel to automate any script.</p>
                                 <h5>Logs Panel</h5>
@@ -963,7 +963,7 @@
                              <li><span class="numbers">6.</span>After selecting the folder, click on “INSTALL” which will start installing RPA studio.</li>
                              <img src="{{ '/assets/images/doc-img4.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Installation Instruction-4</strong></p>
-                            
+
                              <li><span class="numbers">7.</span>The installation will take a bit time, and after installing the Studio, click on CLOSE button to proceed for further process</li>
                              <img src="{{ '/assets/images/doc-img5.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Installation Instruction-5</strong></p>
@@ -1004,7 +1004,6 @@
                          <div id="Un-installInstructions"  class="page-section">
                              <h4 class="red"><span class="numbers"></span>  Uninstall Instructions</h4>
                            <p>To uninstall the TechForce.ai studio, go to the Control Panel and click on Uninstall a program.</p>
-
                            <img src="{{ '/assets/images/doc-img12.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure:  Uninstall Instructions-1 </strong></p>
                            <p>Now, select TechForce.ai studio, right-click on it and click on UNINSTALL.</p>
@@ -1312,7 +1311,7 @@
 
                           <div id="WebAutomation"  class="page-section">
                             <h4 class="purple"> Web Automation</h4>
-                            <p>Web automation is used to automate browser-based applications. Web actions enable the bot to open a web page, read data from the elements, scroll the webpage, deal with the popup windows, take a screenshot of the page, etc.</p>
+                            <p>Web automation is used to automate browser-based applications. Web actions enable the eWorker to open a web page, read data from the elements, scroll the webpage, deal with the popup windows, take a screenshot of the page, etc.</p>
                           </div>
 
                           <div id="OpenWebpage"  class="page-section">
@@ -2154,7 +2153,7 @@
               <div id="MailIntegration"  class="page-section">
                 <h4 class="purple"> Mail Integration</h5>
                 <p>The Mail Integration Activity contains all the mail activities used for creating automation projects. These activities enable robots to:</p>
-                <p>Configuring bot with corresponding Outlook account.</p>
+                <p>Configuring eWorker with corresponding Outlook account.</p>
                 <p>Sending emails from Outlook account and other mail providers.</p>
                 <p>Receiving emails from corresponding Outlook and other mail providers.</p>
                 <p>Saving an attachment with the email.</p>
@@ -2412,7 +2411,7 @@
 
                          <div id="Queues"  class="page-section">
                            <h4 class="skyBlue"> Queues</h4>
-                           <p>The status of currently executing bots/workers and scheduled workers can be seen from the Queues screen.</p>
+                           <p>The status of currently executing eWorker/workers and scheduled workers can be seen from the Queues screen.</p>
                             <img src="{{ '/assets/images/doc-img64.png' | relative_url }}"alt="image" class="topImg" style="width:800px; border: 1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Queues screen </strong></p>
                             <p>Select the worker to check the action flows to be executed in the worker environment.</p>
@@ -2607,7 +2606,7 @@
                           </div>
 
                          <div id="TriggeringBots"  class="page-section">
-                             <h4 class="purple"><span class="numbers"></span> Triggering Bots</h4>
+                             <h4 class="purple"><span class="numbers"></span> Triggering eWorkers</h4>
                              <p><span class="numbers">1.</span>	To trigger an action flow, log into TechForce.ai studio and go to the Business Process screen. </p>
                              <p><span class="numbers">2.</span>	Business Processes page lists the action flows that are published to the eManager console.</p>
                              <p><span class="numbers">3.</span>	To publish an action flow to the eManager console, first zip the action flow folder. Click on the UPLOAD button on the top right corner of the page, browse the zip file and click the UPLOAD button. The action flow will be uploaded.</p>
@@ -2617,7 +2616,7 @@
                              <p><span class="numbers">7.</span> You can see the logs of an executed action flow under the instances of the business processes. you can also see the live logs of an instance while the execution is in progress.</p>
                              <p><span class="numbers">8.</span>	Schedules functionality is, to schedule/execute action flows repetitively on a timely basis.</p>
                              <p><span class="numbers">9.</span> To create a Schedule, navigate to the SCHEDULES page, and click on the CREATE button. </p>
-                             <p><span class="numbers">10.</span> Provide a name to the schedule.  Choose the “Action Flow” that needs to be scheduled. Choose the execution type, worker machine, and time zone. Then specify the time intervals to execute the action flow like Minutes, Hourly, Daily, Weekly, Monthly or Advanced. Also, specify when to stop the bot. </p>
+                             <p><span class="numbers">10.</span> Provide a name to the schedule.  Choose the “Action Flow” that needs to be scheduled. Choose the execution type, worker machine, and time zone. Then specify the time intervals to execute the action flow like Minutes, Hourly, Daily, Weekly, Monthly or Advanced. Also, specify when to stop the eWorker. </p>
                              <p><span class="numbers">11.</span> If selected Minutes, then the business process executes at specified intervals in minutes.</p>
                              <p><span class="numbers">12.</span> If the Hourly option is selected, then the process executes at specified intervals of hours and minutes.</p>
                              <p><span class="numbers">13.</span> If the Daily option is selected, then the process executes every day at the specified time considering hours and minutes.</p>
@@ -2636,13 +2635,13 @@
                             <h5>Stage</h5>
                             <p><span class="numbers">1.</span>Stages have a simple linear representation that flows from top to bottom, when activities follow each other. For example, they are useful in UI automation, when navigation and typing happens one click/keystroke at a time.</p>
                             <h5>Choices</h5>
-                            <p><span class="numbers">1.</span>Decisions need to be implemented in a workflow to enable the Bot to react differently in various conditions in data processing and application interaction. Picking the most appropriate representation of a condition and its subsequent branches has a big impact on the visual structure and readability of a workflow</p>
+                            <p><span class="numbers">1.</span>Decisions need to be implemented in a workflow to enable the eWorker to react differently in various conditions in data processing and application interaction. Picking the most appropriate representation of a condition and its subsequent branches has a big impact on the visual structure and readability of a workflow</p>
                             <h5>If Activity</h5>
                             <p><span class="numbers">1.</span>The IF activity splits a stage vertically and is perfect for short balanced linear branches. Challenges come when more conditions need to be chained in an IF… ELSE IF manner, especially when branches exceed available screen size in either width or height.</p>
                             <h5>Data</h5>
                             <p><span class="numbers">1.</span>Data comes in a single flavor when it comes to visibility and life cycle: variables. While in TechForce.ai the purpose of variables is not bound to a single workflow file it can also be passed from one workflow to another.</p>
                             <h5>Naming Conventions</h5>
-                            <p><span class="numbers">1.</span>Meaningful names should be assigned to workflow files and variables in order to accurately describe their usage throughout the project. e.g. PROCESSNAME_BOT, PROCESSNAME_SUB_BOT, PROCESSNAME_SUB_BOT2.</p>
+                            <p><span class="numbers">1.</span>Meaningful names should be assigned to workflow files and variables in order to accurately describe their usage throughout the project. e.g. PROCESSNAME_eWorker, PROCESSNAME_SUB_eWorker, PROCESSNAME_SUB_eWorker2.</p>
                             <p><span class="numbers">2.</span>Variables should align with the naming convention.</p>
                             <p><span class="numbers">3.</span>Variables should be upper Camel Case, e.g. FirstName, LastName</p>
 
@@ -2718,7 +2717,7 @@
                             <h5>Tips and Tricks of using TechForce.ai Studio</h5>
                             <p><span class="numbers">1.</span>	Variables:</p>
                             <p><span class="numbers">2.</span>In TechForce.ai RPA all variables are global variables. It means any variable can be used anywhere in the script.</p>
-                            <p><span class="numbers">3.</span>*The variables declared in the main bot can be used in the sub bot but vice-versa is not possible.</p>
+                            <p><span class="numbers">3.</span>*The variables declared in the main eWorker can be used in the sub eWorker but vice-versa is not possible.</p>
                             <p><span class="numbers">4.</span>Use a forward slash (/) instead of a backward slash (\) while giving the path in the variables.</p>
                             <p><span class="numbers">5.</span>For example, the usual notation in the windows system is C:\Users\Documents\xyz.xlsxs</p>
                             <p><span class="numbers">6.</span>Use C:/Users/Documents/xyz.xlsx or C:\\Users\\Documents\\xyz.extensions while giving the path in the variable.</p>
@@ -2732,7 +2731,7 @@
                             <p><span class="numbers">2.</span>Make sure the Excel workbook is closed before executing the script. </p>
                             <p><span class="numbers">3.</span>If the given sheet name is not available in the excel workbook, a new sheet with the given name will be created while using the write actions.</p>
                             <h5>5.	Capturing an image or location of the element:</h5>
-                            <p><span class="numbers">1.</span>While capturing the image/location of the element, ensure that the middle point of the selector should be on the element where bot needs to click.</p>
+                            <p><span class="numbers">1.</span>While capturing the image/location of the element, ensure that the middle point of the selector should be on the element where eWorker needs to click.</p>
                             <p><span class="numbers">2.</span>The screen scaling should be 100%.<p>
                             <p><span class="numbers">3.</span>The location coordinates will work only in the same resolution and scaling while executing in any environment.</p>
                             <p><span class="numbers">4.</span>For example, observe the below image.</p>
