docs css changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -143,7 +143,7 @@
   .rateUs.greyBg .ratingBoxMain:after{top:65px}
   .doc-data img{width: 100%;
       text-align: left;
-      margin-left:-65px;
+      margin-left:0px;
       margin-top: -35px;
       display: block;    z-index: -1;
       position: relative;
@@ -807,7 +807,7 @@
                         <div id="AboutTechForce"  class="page-section">
                                 <h3 style="text-transform:none;">About TechForce.ai </h2>
                                 <p>TechForce.ai is the industry’s first eWorkforce company that helps companies deploy their own human-like digital employees to perform work, leveraging intelligent automation technologies.</p>
-                                <img src="{{ '/assets/images/doc-img109.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-top:10px;margin-bottom:10px;">
+                                <img src="{{ '/assets/images/doc-img109.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0px; margin-top:10px;margin-bottom:10px;">
                                 <p>Intelligent Automation Software includes five major technologies:</p>
                                 <li><strong>Robotic Process Automation </strong>for performing repetitive process tasks.</li>
                                 <li><strong>Conversational AI </strong>for performing chat and voice activities with colleagues and customers.</li>
