--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -814,13 +814,13 @@
                                 <li><strong>Natural Language Processing  </strong>for understanding language from business documents and conversations.</li>
                                 <li><strong>Computer Vision </strong>based OCR technology for extracting data from unstructured documents like scanned images, PDF documents, etc.</li>
                                 <li><strong>Intelligent process management </strong>for collaborating with and learning from human colleagues with a human-in-the-loop approach</li>
-                                <img src="{{ '/assets/images/doc-img110.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                                <img src="{{ '/assets/images/doc-img110.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                 <p>TechForce.ai is a comprehensive, low code technology for developers to rapidly deploy eWorkers across business processes with basic programming understanding.</p>
                                 <p>TechForce.ai software offers integrated automation capabilities through its eWorkforce.</p>
                                 <li>Compared to legacy automation approach, which starts with robotic process automation bots, TechForce.ai eWorkforce offers integrated, human-like cognitive capabilities in a single, low-code platform to build, deploy and manage automated business processes</li>
                                 <li>TechForce.ai eWorkers engage, see, act and learn from colleagues through proprietary deep reinforcement learning AI technology</li>
                                 <li>The integrated end-to-end automation eWorkforce software gives a significantly low cost of ownership for organizations to deploy and manage intelligent automation compared to task-based siloed automation offered by robotic process automation and 3rd party AI services integration</li>
-                                <img src="{{ '/assets/images/doc-img111.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                                <img src="{{ '/assets/images/doc-img111.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                 <p>TechForce.ai is the industry’s first intelligent automation-as-a-service platform with cloud-native architecture. It supports dynamic scaling of eWorkers across all layers of its intelligent automation stack.</p>
                                 <p>It offers flexible and hybrid deployment options for enterprises, which include public cloud, on-premises, and Hybrid models, supported by pay-per-use and subscription-based pricing.</p>
                                 <p>TechForce.ai comes with built-in enterprise-grade security with native AES 256 encryption for data at rest and transit, along with robust audit log framework.</p>
@@ -833,7 +833,7 @@
                                 <h5>TechForce.ai RPA Studio</h5>
                                 <p>TechForce.ai RPA Studio is a complete solution for application integration, and automation of third-party applications, administrative IT tasks, and business IT processes.</p>
                                 <p>TechForce.ai RPA Studio contains multiple panels for easier access to specific functionalities. The UI of TechForce.ai RPA Studio contains user-friendly functionalities, that can help automate any business process to reduce the manual workforce and rapidly build AI-powered digital employees across the Business & IT workflows.</p>
-                                <img src="{{ '/assets/images/doc-img108.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                                <img src="{{ '/assets/images/doc-img108.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                 <p style="text-align:center;"><strong>Figure: User Interface</strong></p>
                                 <h5>Menu Bar</h5>
                                 <p>TechForce.ai RPA Studio Menu bar contains File Tab and Record Tab. The menu toolbar contains the following New, Open, Save, Record, Clear, Publish, Settings, Stop and Play functionalities. Menu bars are very common and easy to find. They help in the efficient use of space.</p>
@@ -924,33 +924,33 @@
                            <div id="HardwareRequirements"  class="page-section">
                                <h4 class="skyblue"><span class="numbers"></span> Hardware Requirements</h4>
                              <ol>
-                             <li><span class="numbers">1.</span><strong>Processor: </strong>Intel Core i5 2.6GHz </li>
-                             <li><span class="numbers">2.</span><strong>RAM: </strong>8GB</li>
-                             <li><span class="numbers">3.</span><strong>Storage: </strong>10GB</li>
-                             <li><span class="numbers">4.</span><strong>Others: </strong>Microsoft .Net Framework 4.6(Windows 8.1 and Windows Server 2012 R2: 4.6.1).</li>
+                             <li><span class="numbers">1.</span> <strong>Processor: </strong>Intel Core i5 2.6GHz </li>
+                             <li><span class="numbers">2.</span> <strong>RAM: </strong>8GB</li>
+                             <li><span class="numbers">3.</span> <strong>Storage: </strong>10GB</li>
+                             <li><span class="numbers">4.</span> <strong>Others: </strong>Microsoft .Net Framework 4.6(Windows 8.1 and Windows Server 2012 R2: 4.6.1).</li>
                              </ol>
                              <h5>Download TechForce.ai RPA Studio:</h5>
                              <p>1. To download the studio, the user must register with eManager Console.</p>
                              <p>2. To get access to the eManager Console, go to<a href="https://emcaws.techforce.ai/try/signup?subscriptionId=0">https://emcaws.techforce.ai/try/signup?subscriptionId=0</a>and submit the details.</p>
-                             <img src="{{ '/assets/images/doc-img112.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img112.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20%;margin-top:10px;margin-bottom:10px;">
                              <p>3. Upon successful registration, you will be redirected to the login page.</p>
-                             <img src="{{ '/assets/images/doc-img113.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img113.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20%;margin-top:10px;margin-bottom:10px;">
                               <p>4.	You will be prompted to verify your email on the first login.</p>
                              <img src="{{ '/assets/images/doc-img114.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                               <p>5.	 Go to your registered email and click on the verification link to complete the email verification process.</p>
                              <img src="{{ '/assets/images/doc-img115.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                              <p>6.	Once you login to the eManager console, you will find the Download Studio button at the top right corner. Click on the button to start downloading.</p>
-                             <img src="{{ '/assets/images/doc-img116.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img116.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                            </div>
 
                            <div id="InstallationInstructions"  class="page-section">
                                <h4 class="purple"><span class="numbers"></span> Installation Instructions</h4>
                              <h5>Installing RPA Studio</h5>
                              <ol>
-                             <li><span class="numbers">1.</span>After downloading the RPA studio, move the downloaded studio.exe file to the desired folder where it needs to be installed.</li>
-                             <li><span class="numbers">2.</span>Right-click on the installer and select “Run as administrator” so that RPA studio will have “Admin” privileges</li>
+                             <li><span class="numbers">1.</span> After downloading the RPA studio, move the downloaded studio.exe file to the desired folder where it needs to be installed.</li>
+                             <li><span class="numbers">2.</span> Right-click on the installer and select “Run as administrator” so that RPA studio will have “Admin” privileges</li>
                              <p>The following image is an example of how to run as an administrator.</p>
-                             <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Installation Instruction-1 </strong></p>
                              <li><span class="numbers">3.</span>Windows will ask for permission stating “Do you want to allow the unknown publisher to install the application”. Click YES, and the installation process will start.</li>
                              <li><span class="numbers">4.</span>Accept the license agreement of TechForce.ai to proceed for the further installation process.</li>
@@ -1036,37 +1036,37 @@
                              <h5>Launch the studio</h5>
                              <li><span class="numbers">	<strong>Step1: </strong> </span>  Create a new flow by clicking on the New Icon. A new flow will be displayed.</li>
                              <li><span class="numbers">	<strong>Step2: </strong> </span> Click on the Open web page and drag it into the flow, where a new property window will pop up.</li>
-                             <img src="{{ '/assets/images/doc-img93.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img93.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure:  Open web page Action </strong></p>
                              <p> Select Google Chrome and pass the URL of the website in the <strong>“Page Address”: https://www.amazon.in/</strong></p>
                               <li><span class="numbers"><strong>	Step3: </strong> </span> Now, drag and drop the <strong>“wait”</strong> action into the flow.</li>
-                             <img src="{{ '/assets/images/doc-img94.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img94.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Wait Action </strong></p>
                               <p>Pass “5 sec” in the Time in sec. Here 5 seconds wait time is given to load the webpage.</p>
                               <li><span class="numbers"><strong>	Step4: </strong> </span>Drag and drop the <strong>“Enter Keystrokes”</strong> action into the flow.</li>
                               <p>Capture the XPath of the HTML that needs to be written on the webpage and pass that XPath in the XPath.</p>
-                             <img src="{{ '/assets/images/doc-img95.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img95.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                 <p style="text-align:center;"><strong>Figure: Enter Keystrokes Action </strong></p>
                               <p>Create a variable in the variable window and set iPhone as the value pass that variable into the Text.</p>
                               <li><span class="numbers"><strong>	Step5: </strong></span> Drag and drop the <strong>CLICK</strong> action  into the flow.</li>
-                             <img src="{{ '/assets/images/doc-img96.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img96.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Click Action </strong></p>
                               <p>Select the HTML selector and pass the XPath of the search button in the Selector</p>
                               <li><span class="numbers"><strong>	Step6: </strong> </span> Drag and drop the <strong>WAIT</strong> stage and give 5 seconds like in <strong>“step 3”</strong>.</li>
-                             <img src="{{ '/assets/images/doc-img97.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img97.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                  <p style="text-align:center;"><strong>Figure: Wait Action</strong></p>
                                <li><span class="numbers"><strong>	Step7: </strong></span>Drag and drop the read action into the flow.</li>
-                             <img src="{{ '/assets/images/doc-img98.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img98.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                  <p style="text-align:center;"><strong>Figure: Read Action</strong></p>
                                <p>Pass the XPath of which you want to read into the HTML element and create a variable in the variable window and pass the variable name in the Read to variable.</p>
-                             <img src="{{ '/assets/images/doc-img99.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img99.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Variable Panel - Create Variable </strong></p>
                                <li><span class="numbers"> <strong>	Step8: </strong></span> Drag and drop the echo action  into the flow.</li>
-                             <img src="{{ '/assets/images/doc-img100.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img100.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Echo Action </strong></p>
                               <p>Pass the variable name created to store the read value from the webpage in the Write your custom Variable.</p>
                               <p>The ECHO action will show the results in the logs.</p>
-                             <img src="{{ '/assets/images/doc-img101.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img101.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                 <p style="text-align:center;"><strong>Figure: Logs Panel</strong></p>
                               <li><span class="numbers"><strong>	Step9: </strong></span> Now save the flow by clicking Save and run the flow by clicking the Play button in the menu bar.</li>
                           </div>
@@ -1082,7 +1082,7 @@
                                  <li><strong> Exit:</strong> Exit is used to close the TechForce.ai RPA Studio.</li>
                                  <li><strong> Save:</strong> It is used to save an RPA task with a name. The shortcut is Ctrl+S.</li>
                                  <li><strong> Save As:</strong> It is used to save an already saved document with a new name. The shortcut is Ctrl+Shift+S</li>
-                                 <img src="{{ '/assets/images/doc-img18.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                                 <img src="{{ '/assets/images/doc-img18.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                                  <p  style="text-align:center;"><strong>Figure 3: File Tab</strong></p>
                                  <li><span class="numbers">2.</span><strong> Help Tab:</strong></li>
                                  <li>The Help tab displays the installed version of the studio. </li>
