--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2341,19 +2341,19 @@
                                <p style="text-align:center;"><strong>Figure: Login </strong></p>
                                <p>2.	Enter the credentials and click on the login button, you can see Business Process, Workers, Queues, Schedules, and Secret Vault in the left menu</p>
                                <p>3.	Business Process tab shows the list of action flows published to the eManager console.</p>
-                               <img src="{{ '/assets/images/doc-img49.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img49.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Business Process tab </strong></p>
                                <p>4.	Workers tab lists the workers registered with the eManager console. It contains the required runtime to execute the action flows that are published to eManager console.   </p>
-                               <img src="{{ '/assets/images/doc-img50.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img50.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                     <p style="text-align:center;"><strong>Figure: Workers tab </strong></p>
                                <p>5.	 Queues shows the current and pending tasks waiting for the execution in the Worker.</p>
-                               <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                  <p style="text-align:center;"><strong>Figure:  Queues</strong></p>
                                <p>6.	 Schedules functionality is, to schedule/execute action flows repetitively on a timely basis, like Minutes, Hourly, Daily, Weekly, Monthly or Advanced,</p>
-                               <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Schedules </strong></p>
                                <p>7.	Secret Vault is used to store sensitive information such as credentials, tokens, keys etc. It supports different types of assets like Text, Boolean, Integer, and Credentials.</p>
-                               <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Secret Vault </strong></p>
                            </div>
 
@@ -2361,7 +2361,7 @@
                              <h4 class="skyBlue"> Process Management</h4>
                              <h5>Adding the Business Process</h5>
                              <p>1. Log in to the EM Console account to view the Business Process screen. Click on the UPLOAD button at the top right corner and upload the Zip file of the RPA script onto the Business Process. After uploading, execute the flow.</p>
-                             <img src="{{ '/assets/images/doc-img58.png' | relative_url }}"alt="image" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img58.png' | relative_url }}"alt="image" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Business Process screen </strong></p>
                              <h5>Executing a Business Process:</h5>
                              <p>2.In the business process page, upload the RPA flow and Click on the PLAY button to execute the flow. After clicking on the play button, the following image will appear.</p>
@@ -2426,7 +2426,7 @@
                         <div id="SecretVault"  class="page-section">
                           <h4 class="skyBlue"> Secret Vault</h4>
                           <p>The main functionality of the Secret Vault is to create the values that are not to be shared or shown to others.</p>
-                          <img src="{{ '/assets/images/doc-img67.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img67.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                            <p style="text-align:center;"><strong>Figure: secret vault screen </strong></p>
                           <p>A secret vault can be created with different types like Integer, Boolean, Text, and Credentials. To create a secret vault, click on the CREATE button.</p>
                           <img src="{{ '/assets/images/doc-img68.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
@@ -2503,14 +2503,14 @@
                         <div id="Organization"  class="page-section">
                           <h3> <span style="margin-left:20px;">Organization</span></h3>
                           <p>Only the admin will have access to create an organization. To create an organization, navigate to Account Management and from the Account Management drop-down, select the ORGANIZATION tab. On the Organization screen, click on the “ADD” button to create a new organization.</p>
-                          <img src="{{ '/assets/images/doc-img102.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img102.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p style="text-align:center;"><strong>Figure: Organization details </strong></p>
                         </div>
 
                         <div id="ProfileSettings"  class="page-section">
                           <h3><span class="numbers"></span> <span style="margin-left:20px;">Profile Settings</span></h3>
                           <p>Profile details are created when a user logs in for the first time. Those details can be updated in Account Management.</p>
-                          <img src="{{ '/assets/images/doc-img103.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img103.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p style="text-align:center;"><strong>Figure: Profile Details</strong></p>
                         </div>
 
@@ -2587,21 +2587,21 @@
 
                              <h5>Worker creation:</h5>
                              <p>1.This is the worker screen before a worker is created in Worker management.</p>
-                              <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
                              <p><span class="numbers">2.</span>To create a worker, open the TechForce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon. Click on settings and register. The following screen displays.</p>
                              <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
                              <p><span class="numbers">3.</span>Enter the details and click on SUBMIT. A message confirming successful submission will appear. This creates the worker.  After creating the worker the details of the worker like name, host and so on can be seen and the worker RDP details will be sent via an email.</p>
                              <p><span class="numbers">4.</span>The  following image shows the screen of the worker created, also the details of the created worker can be seen</p>
-                             <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
                               <h5>Delete Worker</h5>
                              <p><span class="numbers">1.</span>To delete a worker created earlier, just click on the DELETE icon which is available in the details of the worker.</p>
-                             <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
                              <p><span class="numbers">2.</span>On the next screen, click on YES to confirm the deletion of the worker on the machine.</p>
-                             <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
                           </div>
 
