--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2379,10 +2379,10 @@
                             <h4 class="skyBlue"> Worker Management</h4>
                             <h5>Worker Management:</h5>
                             <p>1.The main functionality of a Worker is to execute the flows/business processes that are uploaded on the business process page. So, after adding the worker, while executing the business process, select the worker that was created on the worker screen. </p>
-                            <img src="{{ '/assets/images/doc-img90.png' | relative_url }}"alt="image" class="topImg" style="width:800px;border:1px solid green; margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img90.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Worker screen</strong></p>
                             <p>After creating a worker, the details of the worker - like name, host and so on - can be seen and the worker RDP details will be sent through an email.</p>
-                            <img src="{{ '/assets/images/doc-img91.png' | relative_url }}"alt="image" class="topImg" style="width:800px;border:1px solid green; margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img91.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: eWorker machine details </strong></p>
                             <h5>Worker Categories:</h5>
                             <p>1.The worker category is the type of worker that is going to be registered. Currently, only the “Reserved” type can be created as a worker.</p>
@@ -2391,34 +2391,34 @@
 
                             <h5>Worker creation:</h5>
                             <p>1.This is the worker screen before a worker is created in Worker management.</p>
-                             <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="width:800px;border:1px solid green; margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Worker screen </strong></p>
                             <p><span class="numbers">2.</span> To create a worker, open the TechForce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon. Click on settings and register. The following screen displays.</p>
-                            <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="width:800px;border:1px solid green; margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Register your eWorker machine </strong></p>
                             <p><span class="numbers">3.</span>Enter the details and click on SUBMIT. A message confirming successful submission will appear. This creates the worker.  After creating the worker the details of the worker like name, host and so on can be seen and the worker RDP details will be sent via an email.</p>
                             <p><span class="numbers">4.</span>The  following image shows the screen of the worker created, also the details of the created worker can be seen</p>
-                            <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="width:800px;border:1px solid green; margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure: eWorker machine detals </strong></p>
                              <h5>Delete Worker</h5>
                             <p><span class="numbers">1.</span>To delete a worker created earlier, just click on the DELETE icon which is available in the details of the worker.</p>
-                            <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="width:800px;border:1px solid green; margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Worker screen </strong></p>
                             <p><span class="numbers">2.</span>On the next screen, click on YES to confirm the deletion of the worker on the machine.</p>
-                            <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="width:800px;border:1px solid green; margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Delete woker screen </strong></p>
                          </div>
 
                          <div id="Queues"  class="page-section">
                            <h4 class="skyBlue"> Queues</h4>
                            <p>The status of currently executing eWorker/workers and scheduled workers can be seen from the Queues screen.</p>
-                            <img src="{{ '/assets/images/doc-img64.png' | relative_url }}"alt="image" class="topImg" style="width:800px; border: 1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img64.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Queues screen </strong></p>
                             <p>Select the worker to check the action flows to be executed in the worker environment.</p>
-                            <img src="{{ '/assets/images/doc-img65.png' | relative_url }}"alt="image" class="topImg" style="width:800px; border: 1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img65.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Select eWorker machine</strong></p>
                             <p>After selecting the worker, you can see the action flows to be executed. </p>
-                            <img src="{{ '/assets/images/doc-img66.png' | relative_url }}"alt="image" class="topImg" style="width:800px; border: 1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img66.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Action Flows status</strong></p>
                             <p>Note: On-premise the Worker List is called as “Queues”</p>
                         </div>
