--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2960,7 +2960,7 @@ $(".giveRate li").click(function(){
     $(document).ready(function(){
         // Show hide popover
         $("#Installation").click(function(){
-            $(this).find("").slideToggle();
+            $(this).find("#childmenu").slideToggle();
         });
     });
     $(document).on("click", function(event){
