--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -563,8 +563,8 @@
                                  <li class="subMenu">
                                       <a href="#TechForce"  class="heading"><span class="numbers"></span>TechForce.ai Studio Guide</a>
                                       <ul class="collapse list-unstyled collapse-2">
-                                          <li id="Installation"><a class="child 2" href="#Installation">Installation</a>
-                                              <ul class="childmenu">
+                                          <li id="installation"><a class="child 2" href="#Installation">Installation</a>
+                                              <ul id="childmenu">
                                                  <li style="margin-left:20px;"><a class="child 2" href="#SoftwareRequirements"> Software Requirements</span></a></li>
                                                  <li style="margin-left:20px;"><a class="child 2" href="#HardwareRequirements">Hardware Requirements</span></a></li>
                                                  <li style="margin-left:20px;"><a class="child 2" href="#InstallationInstructions"> Installation Instructions</span></a></li>
@@ -2957,18 +2957,14 @@ $(".giveRate li").click(function(){
 
 
 <script>
-    $(document).ready(function(){
-        // Show hide popover
-        $("#Installation").click(function(){
-            $(this).find("#childmenu").slideToggle("fast");
-        });
+
+    var main = function () {
+    ('#installation').click(function() { ('#childmenu').hide();
+    $(this).children('#childmenu').toggle();
     });
-    $(document).on("click", function(event){
-        var $trigger = $("#Installation");
-        if($trigger !== event.target && !$trigger.has(event.target).length){
-            $("#childmenu").slideUp("fast");
-        }
-    });
+    };
+
+    $(document).ready(main);
 </script>
 
 </body>
