--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2959,8 +2959,8 @@ $(".giveRate li").click(function(){
 <script>
 
     var main = function () {
-    ('#installation').click(function() { ('#childmenu').hide();
-    $(this).children('#childmenu').toggle();
+    ('#installation').click(function() { ('ul').hide();
+    $(this).children('ul').toggle();
     });
     };
 
