--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2931,7 +2931,7 @@ $(".child").click(function(){
 });
 $(".heading").click(function(){
    $(this).toggleClass('active').siblings().removeClass('active');
-   var n = $(this).parent().children()[1]
+   var n = $(this).parent().children('ul')[]
    if($(n).css("display") == "none"){
     $(open_menu_item).slideToggle()
         open_menu_item = n
@@ -2958,13 +2958,7 @@ $(".giveRate li").click(function(){
 
 <script>
 
-    var main = function () {
-    ('#installation').click(function() { ('ul').hide();
-    $(this).children('ul').toggle();
-    });
-    };
 
-    $(document).ready(main);
 </script>
 
 </body>
