css docs and divsss

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2951,7 +2951,7 @@ $(".giveRate li").click(function(){
 
 <script>
  $('#MenuOptions').click(function(){
-  $(this).children('ul').stop().slideToggle(700);
+  $(this).children('ul').stop(true).slideToggle('fast');
 });
 </script>
 
