--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2952,6 +2952,7 @@ $(".giveRate li").click(function(){
 <script>
  $('#MenuOptions').click(function(){
   $(this).children('ul').stop(true).slideToggle('fast');
+   $(this).toggleClass("dropdown-active");
 });
 </script>
 
